# Rust-LLM

./: Cargo.toml  README.md
chat/chat-cli/: Cargo.toml
chat/chat-cli/src/: chat_client.rs  console.rs  main.rs
chat/chat-server/: Cargo.toml
chat/chat-server/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  message.rs  model.rs  operators.rs  params.rs  service.rs  session.rs  tensor.rs
core/src/kvcache/: block.rs  mod.rs  radix_tree.rs
story-teller/: Cargo.toml
story-teller-wasm/: Cargo.toml  client.py
story-teller-wasm/src/: main.rs
story-teller/src/: main.rs
