[workspace.dependencies]
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.16", features = ["derive"] }
tokenizers = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = { version = "2.4.1", features = ["std", "num-traits", "serde"] }
getset = "0.1.2"

[workspace]
resolver = "2"
members = [
    "core",
    "story-teller",
    "chat/chat-server",
    "chat/chat-cli",
    "story-teller-wasm",
]
