[package]
name = "lm-infer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = "0.4.3"
rand = "0.8"
getset = { workspace = true }
num-traits = "0.2.19"
rayon = { version = "1.10.0", optional = true }
dashmap = "6.0.1"
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
half = { workspace = true }

[features]
default = ["perf"]
rayon = ["dep:rayon"]
perf = []

