[package]
name = "story-teller-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
lm-infer-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }

hyper_wasi = { version = "0.15.2", features = ["full"]}
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}

[features]
default = ["perf"]
perf = ["lm-infer-core/perf"]

[profile.release]
lto = true
