[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lm-infer-core = { path = "../../core" }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rocket = "0.5.1"

[features]
default = ["perf"]
rayon = ["lm-infer-core/rayon"]
perf = ["lm-infer-core/perf"]

[profile.release]
lto = true
